--- a/app/src/main/res/layout/activity_test4.xml
+++ b/app/src/main/res/layout/activity_test4.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/chicken"
+    android:background="@drawable/library"
     tools:context=".test4Activity">
 
     <TextView
@@ -17,7 +17,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="4. 고기 좋아해요?"
+        android:text="4. 책을 자주 읽나요?"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,9 +37,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#ABD7DADA"
         android:onClick="t4_bt1Click"
-        android:text="역시 삼겹살이 최고지!"
+        android:text="책 정말 자주 읽어요 "
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,9 +58,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#ABD7DADA"
         android:onClick="t4_bt2Click"
-        android:text="아, 저 채식주의자예요"
+        android:text="1주일에 한번은 봐요"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,9 +79,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#ABD7DADA"
         android:onClick="t4_bt3Click"
-        android:text="치느님 영접을위해 한국에 태어났어요"
+        android:text="필요하면 봐요"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -100,9 +100,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#ABD7DADA"
         android:onClick="t4_bt4Click"
-        android:text="일주일에 한번은 먹어요"
+        android:text="아니요"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -121,9 +121,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#ABD7DADA"
         android:onClick="t4_bt5Click"
-        android:text="역시 고기반찬이죠"
+        android:text="책이라면 질색이예요!"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
