--- a/app/src/main/res/layout/activity_test6.xml
+++ b/app/src/main/res/layout/activity_test6.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/angry"
+    android:background="@drawable/think"
     tools:context=".test6Activity">
 
     <TextView
@@ -17,8 +17,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="6. 주로 무엇 때문에 화가나요?"
-        android:textColor="@android:color/background_dark"
+        android:text="6. 당신은 생각이 많은 편인가요?"
+        android:textColor="#FCFCFC"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@
         android:layout_marginBottom="16dp"
         android:background="@color/colorPrimary"
         android:onClick="t6_bt1Click"
-        android:text="친구가 카톡 안 보는 것"
+        android:text="늘 많은 생각을 하며 살져"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,7 +60,7 @@
         android:layout_marginBottom="8dp"
         android:background="@color/colorPrimary"
         android:onClick="t6_bt2Click"
-        android:text="무시 당하는 것"
+        android:text="가끔은 생각이 많아져요"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,7 +81,7 @@
         android:layout_marginBottom="8dp"
         android:background="@color/colorPrimary"
         android:onClick="t6_bt3Click"
-        android:text="집중 중인데 제가 자꾸 말걸 때"
+        android:text="그냥 보통이예요"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +102,7 @@
         android:layout_marginBottom="16dp"
         android:background="@color/colorPrimary"
         android:onClick="t6_bt4Click"
-        android:text="친구가  갑자기 나보다 잘나갈 때"
+        android:text="가끔? 하는거같에요"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +123,7 @@
         android:layout_marginBottom="16dp"
         android:background="@color/colorPrimary"
         android:onClick="t6_bt5Click"
-        android:text="그냥 되는일이 하나도 없을 때"
+        android:text="세상은 단순하게 살아야되는법"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
