--- a/app/src/main/res/layout/activity_test7.xml
+++ b/app/src/main/res/layout/activity_test7.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/hate"
+    android:background="@drawable/up"
     tools:context=".test7Activity">
 
     <TextView
@@ -17,7 +17,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="7. 누굴 싫어하나요?"
+        android:text="7. 일의 재미보다 성취를 중요시하는 타입인가요?"
         android:textColor="@android:color/background_dark"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,9 +37,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#ABD7DADA"
         android:onClick="t7_bt1Click"
-        android:text="완벽주의자"
+        android:text="언제나 일을 제대로 하는것이 가장 중요합니다."
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,9 +58,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#ABD7DADA"
         android:onClick="t7_bt2Click"
-        android:text="분위기브레이커"
+        android:text="즐기지 못해도 일을 끝까지 해야합니다"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,9 +79,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#ABD7DADA"
         android:onClick="t7_bt3Click"
-        android:text="자신감없는 사람"
+        android:text="우선 일을 즐길줄 알아야 일을 잘하지 않을까요?"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -100,9 +100,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#ABD7DADA"
         android:onClick="t7_bt4Click"
-        android:text="게으름뱅이"
+        android:text="피할수 없다면 즐깁시다! 의지력이 강한 편은 아니예요"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -121,9 +121,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#ABD7DADA"
         android:onClick="t7_bt5Click"
-        android:text="그냥 조용한 사람"
+        android:text="난 게으름뱅이예요"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
