--- a/app/src/main/res/layout/activity_test8.xml
+++ b/app/src/main/res/layout/activity_test8.xml
@@ -37,7 +37,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#99D7DADA"
         android:onClick="t8_bt1Click"
         android:text="가끔씩 화내요 "
         android:textSize="18sp"
@@ -58,7 +58,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#99D7DADA"
         android:onClick="t8_bt2Click"
         android:text="주변 사람이 화나게해요"
         android:textSize="18sp"
@@ -79,7 +79,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#99D7DADA"
         android:onClick="t8_bt3Click"
         android:text="눈치없으면 정말 화가나요"
         android:textSize="18sp"
@@ -100,7 +100,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#99D7DADA"
         android:onClick="t8_bt4Click"
         android:text="부처란 소리 듣고다녀요"
         android:textSize="18sp"
@@ -121,7 +121,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#99D7DADA"
         android:onClick="t8_bt5Click"
         android:text="화내는건 안좋아요!"
         android:textSize="18sp"
