--- a/app/src/main/res/layout/activity_test9.xml
+++ b/app/src/main/res/layout/activity_test9.xml
@@ -37,7 +37,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#8CD7DADA"
         android:onClick="t9_bt1Click"
         android:text="축구, 농구"
         android:textSize="18sp"
@@ -58,9 +58,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#8CD7DADA"
         android:onClick="t9_bt2Click"
-        android:text="운동 해야하나요?"
+        android:text="운동 안해요"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +79,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#8CD7DADA"
         android:onClick="t9_bt3Click"
         android:text="볼링, 골프, 야구"
         android:textSize="18sp"
@@ -100,7 +100,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#8CD7DADA"
         android:onClick="t9_bt4Click"
         android:text="조깅"
         android:textSize="18sp"
@@ -121,7 +121,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="#8CD7DADA"
         android:onClick="t9_bt5Click"
         android:text="권투"
         android:textSize="18sp"
